--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,53 @@
-Django==1.11.4
-djangorestframework==3.6.4
-djangorestframework-gis==0.11.2
+arabic-reshaper==2.1.3
+asgiref==3.3.4
+attrs==20.3.0
+autobahn==21.3.1
+Automat==20.2.0
+bottle==0.12.19
+bottle-websocket==0.2.9
+cffi==1.14.5
+channels==3.0.3
+colorama==0.4.4
+constantly==15.1.0
+cryptography==3.4.7
+daphne==3.0.2
+Django==3.2
+django-eel==0.11
+Eel==0.14.0
+future==0.18.2
+gevent==21.1.2
+gevent-websocket==0.10.1
+greenlet==1.0.0
+gunicorn==20.1.0
+html5lib==1.1
+hyperlink==21.0.0
+idna==3.1
+incremental==21.3.0
+numpy==1.20.2
+opencv-python==4.5.1.48
+Pillow==8.2.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
+PyPDF2==1.26.0
+python-bidi==0.4.2
+pytz==2021.1
+pyzbar==0.1.8
+qrcode==6.1
+reportlab==3.5.67
+service-identity==18.1.0
+six==1.15.0
+sqlparse==0.4.1
+Twisted==21.2.0
+twisted-iocpsupport==1.0.1
+txaio==21.2.1
+typing-extensions==3.10.0.0
+webencodings==0.5.1
+whichcraft==0.6.1
+whitenoise==5.2.0
+xhtml2pdf==0.2.5
+XlsxWriter==1.4.0
+zope.event==4.5.0
+zope.interface==5.4.0
