--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,29 @@
 arabic-reshaper==2.1.3
 asgiref==3.3.4
+attrs==20.3.0
+autobahn==21.3.1
+Automat==20.2.0
+cffi==1.14.5
+channels==3.0.3
+colorama==0.4.4
+constantly==15.1.0
+cryptography==3.4.7
+daphne==3.0.2
 Django==3.2
+future==0.18.2
+gevent==21.1.2
+greenlet==1.0.0
 gunicorn==20.1.0
 html5lib==1.1
+hyperlink==21.0.0
+idna==3.1
+incremental==21.3.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
+python-bidi==0.4.2
 pytz==2021.1
 reportlab==3.5.67
 service-identity==18.1.0
